feat: integrate tempat teduh astro site

--- a/apps/lp-tempat-teduh/src/components/global/Footer.astro
+++ b/apps/lp-tempat-teduh/src/components/global/Footer.astro
@@ -1,12 +1,6 @@
 ---
 const navigation = [
   {
-    link: {
-      href: "https://buy.polar.sh/polar_cl_u4mIGtLl_UO9udBG4udXk-2OajL07nSjYkWLbrbPgz4",
-      text: "Buy Quartiere",
-    },
-  },
-  {
     link: { href: "/system/overview", text: "Overview" },
   },
   {
@@ -33,19 +27,10 @@ const navigation = [
 ];
 const social = [
   {
-    link: { href: "#_", text: "X" },
-  },
-  {
     link: { href: "#_", text: "Facebook" },
   },
   {
     link: { href: "#_", text: "Instagram" },
-  },
-  {
-    link: { href: "#_", text: "Linkedin" },
-  },
-  {
-    link: { href: "#_", text: "Youtube" },
   },
   {
     link: { href: "#_", text: "Tiktok" },
@@ -165,7 +150,7 @@ const properties = [
 
     <div class="mt-8 pt-8 border-t border-gray-200 space-y-2">
       <span class="text-sm text-black">
-        Copyright © 2006-2024 Quartiere's International Realty LLC. All Rights
+        Copyright © 2025 Tempat Teduh - Raizora. All Rights
         Reserved.
       </span>
     </div>
