--- a/apps/lp-tempat-teduh/src/components/global/Navigation.astro
+++ b/apps/lp-tempat-teduh/src/components/global/Navigation.astro
@@ -58,7 +58,7 @@ const navigation = [
           href="/"
         >
           <img class="size-3 lg:ml-auto" src="/images/logo.svg" alt="" />
-          Quartiere
+          Tempat Teduh
         </a>
         <div class="order-last">
           <button
@@ -93,13 +93,6 @@ const navigation = [
         <div
           class="flex gap-2 lg:gap-4 text-black uppercase text-xs lg:text-sm"
         >
-          <a class="hover:text-gray-500" href="/system/overview"> Overview </a>
-          <a
-            class="hover:text-gray-500"
-            href="https://buy.polar.sh/polar_cl_u4mIGtLl_UO9udBG4udXk-2OajL07nSjYkWLbrbPgz4"
-          >
-            Buy Quartiere
-          </a>
         </div>
       </div>
       <nav
