--- a/apps/lp-tempat-teduh/src/components/headers/hero.astro
+++ b/apps/lp-tempat-teduh/src/components/headers/hero.astro
@@ -34,7 +34,7 @@ const whyus = [
       <div
         class="absolute bg-white bottom-0 right-0 p-8 w-full md:max-w-xs flex flex-col"
       >
-        <p class="text-sm">Quartiere / Real Estate</p>
+        <p class="text-sm">Tempat Teduh</p>
         <p>
           <a class="text-xs" href="tel:+1-202-555-0123">Tel: (202) 555-0123</a>
         </p>
