--- a/apps/lp-tempat-teduh/src/components/BaseHead.astro
+++ b/apps/lp-tempat-teduh/src/components/BaseHead.astro
@@ -3,12 +3,12 @@ import "../styles/global.css";
 import Metas from "./seo/Metas.astro";
 import Favicons from "./seo/Favicons.astro";
 const {
-  title = "Lexington Starter",
+  title = "Tempat Teduh",
   description = "#",
   url,
   socialImage = "/social-preview-image.png",
   twitterImage = "/twitter-preview-image.png", // Assuming you have a separate image for Twitter
-  author = "Lexington Themes",
+  author = "Raizora Indonesia",
 } = Astro.props;
 const sanitizedTitle = title.toLowerCase().replaceAll(" ", "-");
 ---
@@ -18,7 +18,7 @@ const sanitizedTitle = title.toLowerCase().replaceAll(" ", "-");
   description={description.substring(0, 100)}
   url={Astro.site
     ? `${Astro.site}/${sanitizedTitle}`
-    : `https://lexingtonthemes.com/${sanitizedTitle}`}
+    : `https://raizora.com/${sanitizedTitle}`}
   image={socialImage}
   author={author}
   twitterImage={twitterImage}
