feat: update background gradient

--- a/apps/lp-tempat-teduh/src/styles/global.css
+++ b/apps/lp-tempat-teduh/src/styles/global.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/forms";
 @plugin "@tailwindcss/typography";
+@plugin "@tailwindcss/utilities"
+
 @layer components {
   .prose-styles {
     @apply max-w-3xl prose prose-p:text-gray-500 prose-headings:font-normal prose-img:aspect-video prose-a:text-gray-600 prose-a:underline-offset-4 prose-a:decoration-gray-600 prose-a:hover:decoration-gray-800 prose-code:bg-gray-100 prose-code:rounded-none prose-code:p-1 prose-pre:bg-gray-100 prose-pre:rounded-md prose-pre:p-2 prose-pre:overflow-x-auto prose-blockquote:border-l-4 prose-blockquote:border-gray-200 prose-blockquote:pl-4 prose-blockquote:ml-0 prose-hr:border-gray-200 prose-hr:my-6 prose-ol:list-decimal prose-ul:list-disc prose-li:font-normal ;
@@ -59,6 +61,8 @@
   --astro-code-token-punctuation: theme('colors.gray.500');
   --astro-code-token-link: theme('colors.gray.800');
 }
+
+
 
 
 
