--- a/apps/lp-klolatoko/src/pages/index.astro
+++ b/apps/lp-klolatoko/src/pages/index.astro
@@ -7,9 +7,9 @@ import FeatureSix from "@/components/features/FeatureSix.astro";
 import FeatureTwo from "@/components/features/FeatureTwo.astro";
 import FeatureSeven from "@/components/features/FeatureSeven.astro";
 import TestimonialOne from "@/components/testimonials/TestimonialOne.astro";
-import PricingThree from "@/components/pricing/PricingThree.astro";
+import Pricing from "@/components/pricing/Pricing.astro";
 import FaqThree from "@/components/faqs/FaqThree.astro";
-import CtaThree from "@/components/ctas/CtaThree.astro";
+import CtaTwo from "@/components/ctas/CtaTwo.astro";
 ---
 <BaseLayout>
   <HeroTwo />
@@ -19,7 +19,7 @@ import CtaThree from "@/components/ctas/CtaThree.astro";
   <FeatureTwo />
   <FeatureSeven />
   <TestimonialOne />
-  <PricingThree />
+  <Pricing />
   <FaqThree />
-  <CtaThree />
+  <CtaTwo />
 </BaseLayout>
