feat: implement testimonial

--- a/apps/lp-klolatoko/src/pages/index.astro
+++ b/apps/lp-klolatoko/src/pages/index.astro
@@ -6,7 +6,7 @@ import FeatureNine from "@/components/features/FeatureNine.astro";
 import FeatureSix from "@/components/features/FeatureSix.astro";
 import FeatureTwo from "@/components/features/FeatureTwo.astro";
 import FeatureSeven from "@/components/features/FeatureSeven.astro";
-import TestimonialOne from "@/components/testimonials/TestimonialOne.astro";
+import TestimonialTwo from "@/components/testimonials/TestimonialTwo.astro";
 import Pricing from "@/components/pricing/Pricing.astro";
 import FaqThree from "@/components/faqs/FaqThree.astro";
 import CtaTwo from "@/components/ctas/CtaTwo.astro";
@@ -18,7 +18,7 @@ import CtaTwo from "@/components/ctas/CtaTwo.astro";
   <FeatureSix />
   <FeatureTwo />
   <FeatureSeven />
-  <TestimonialOne />
+  <TestimonialTwo />
   <Pricing />
   <FaqThree />
   <CtaTwo />
