feat: implement header

--- a/apps/lp-klolatoko/src/layouts/BaseLayout.astro
+++ b/apps/lp-klolatoko/src/layouts/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import BaseHead from "@/components/BaseHead.astro";
-import Navigation from "@/components/global/Navigation.astro";
 import { Footer } from '@packages/ui/components/layouts/footers/footer-ketuju';
+import { Navigation } from '@packages/ui/components/layouts/headers/header-ketuju';
 ---
 
 <html
