feat: update footer component

--- a/apps/lp-klolatoko/src/layouts/BaseLayout.astro
+++ b/apps/lp-klolatoko/src/layouts/BaseLayout.astro
@@ -11,6 +11,6 @@ import { Navigation } from '@packages/ui/components/layouts/headers/header-ketuj
   <body class="bg-white">
     <Navigation />
     <slot />
-    <Footer />
+    <Footer productName="Klolatoko" />
   </body>
 </html>
