--- a/apps/lp-klolaform/src/layouts/BaseLayout.astro
+++ b/apps/lp-klolaform/src/layouts/BaseLayout.astro
@@ -1,8 +1,9 @@
 ---
 import BaseHead from "@/components/BaseHead.astro";
-import Navigation from "@/components/global/Navigation.astro";
+import { Footer } from '@packages/ui/components/layouts/footers/footer-ketuju';
+import { Navigation } from '@packages/ui/components/layouts/headers/header-ketuju';
 import Contact from "@/components/forms/Contact.astro";
-import Footer from "@/components/global/Footer.astro";
+import Config from "../../site.config.js";
 ---
 
 <html lang="en">
@@ -13,6 +14,6 @@ import Footer from "@/components/global/Footer.astro";
     <Navigation />
     <Contact />
     <main class="grow"><slot /></main>
-    <Footer />
+    <Footer productName={Config.title} description={Config.description} />
   </body>
 </html>
