--- a/apps/lp-klolatoko/src/components/BaseHead.astro
+++ b/apps/lp-klolatoko/src/components/BaseHead.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import "../../../../packages/ui/globals.css";
 import { AstroSeo } from "@astrolib/seo";
 import Config from "../../site.config.js";
 ---
