--- a/apps/lp-klolatoko/src/components/BaseHead.astro
+++ b/apps/lp-klolatoko/src/components/BaseHead.astro
@@ -36,36 +36,24 @@ import Config from "../../site.config.js";
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <!-- Basic Meta Tags -->
-<title>Your Website Title</title>
-<meta
-  name="description"
-  content="A brief description of your website content."
-/>
 <meta name="keywords" content="keyword1, keyword2, keyword3" />
-<meta name="author" content="Your Name or Company Name" />
+<meta name="author" content="Ketuju by Raizora" />
 
 <!-- Favicons -->
-<link rel="icon" href="/favicon.ico" sizes="any" />
-<link rel="icon" href="/icon.svg" type="image/svg+xml" />
-<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-<link rel="manifest" href="/manifest.webmanifest" />
+<link rel="icon" href="./public/favicons/favicon.ico" sizes="any" />
+<link rel="icon" href="./public/favicons/icon.svg" type="image/svg+xml" />
+<link rel="apple-touch-icon" href="./public/favicons/apple-touch-icon.png" />
+<link rel="manifest" href="./public/favicons/site.webmanifest" />
 
 <!-- Favicon for IE -->
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
 <!-- Favicons for different sizes -->
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-<link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png" />
+<link rel="icon" type="image/png" sizes="16x16" href="./public/favicons/favicon-16x16.png" />
+<link rel="icon" type="image/png" sizes="32x32" href="./public/favicons/favicon-32x32.png" />
+<link rel="icon" type="image/png" sizes="48x48" href="./public/favicons/favicon-48x48.png" />
 
 <!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://www.yourwebsite.com/" />
-<meta property="og:title" content="Your Website Title" />
-<meta
-  property="og:description"
-  content="A brief description of your website content."
-/>
 <meta
   property="og:image"
   content="https://www.yourwebsite.com/path/to/image.jpg"
@@ -73,11 +61,11 @@ import Config from "../../site.config.js";
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://www.yourwebsite.com/" />
-<meta property="twitter:title" content="Your Website Title" />
+<meta property="twitter:url" content={Config.url} />
+<meta property="twitter:title" content={Config.title} />
 <meta
   property="twitter:description"
-  content="A brief description of your website content."
+  content={Config.description}
 />
 <meta
   property="twitter:image"
@@ -85,7 +73,7 @@ import Config from "../../site.config.js";
 />
 
 <!-- Canonical URL -->
-<link rel="canonical" href="https://www.yourwebsite.com/" />
+<link rel="canonical" href={Config.description} />
 
 <!-- Additional SEO -->
 <meta name="robots" content="index, follow" />
