--- a/packages/ui/globals.css
+++ b/packages/ui/globals.css
@@ -689,3 +689,10 @@ body {
 
 
 
+.container-flat {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 2rem;
+  padding-left: 2rem;
+}
