chore: remove local global styles and use package ui global instead

--- a/packages/ui/globals.css
+++ b/packages/ui/globals.css
@@ -83,6 +83,33 @@
   --animate-dashes-reverse: dashes 0.8s linear infinite reverse;
   --animate-hover: hover 4s cubic-bezier(0.45, 0, 0.55, 1) infinite;
 
+  /** KLOLATOKO **/
+  --color-chalk: #ffffff;
+  --color-white: #f5f5f5;
+  --color-black: #171717;
+  --color-accent-50: #fff7f5;
+  --color-accent-100: #ffeae5;
+  --color-accent-200: #ffd0c7;
+  --color-accent-300: #ffae9e;
+  --color-accent-400: #ff8870;
+  --color-accent-500: #ff421e;
+  --color-accent-600: #f02800;
+  --color-accent-700: #d12300;
+  --color-accent-800: #ad1d00;
+  --color-accent-900: #801500;
+  --color-accent-950: #611000;
+  --color-zinc-50: #fafafa;
+  --color-zinc-100: #f4f4f5;
+  --color-zinc-200: #e4e4e7;
+  --color-zinc-300: #d4d4d8;
+  --color-zinc-400: #a1a1aa;
+  --color-zinc-500: #71717a;
+  --color-zinc-600: #52525b;
+  --color-zinc-700: #3f3f46;
+  --color-zinc-800: #27272a;
+  --color-zinc-900: #18181b;
+  --color-zinc-950: #09090b;
+
   @keyframes hide {
     from {
       opacity: 1;
@@ -360,6 +387,26 @@ body {
     --color-interactive: 140, 100, 255;
     --circle-size: 80%;
     --blending: hard-light;
+
+    /* KLOLATOKO */
+    --astro-code-color-text: theme("colors.zinc.500");
+    --astro-code-token-link: theme("colors.accent.600");
+    --astro-code-token-comment: theme("colors.zinc.400");
+    --astro-code-token-string: #60beff;
+    --astro-code-token-constant: theme("colors.accent.600");
+    --astro-code-background: theme("colors.zinc.50");
+    --astro-code-token-keyword: #e3962d;
+    --astro-code-token-function: #1da8ff;
+    --astro-code-token-parameter: theme("colors.accent.600");
+    --astro-code-token-punctuation: theme("colors.accent.600");
+    --astro-code-token-string-expression: #ff421e;
+    --astro-code-token-bold: inherit;
+    --astro-code-token-italic: italic;
+    --astro-code-token-underline: underline;
+    --astro-code-token-bold: inherit;
+    --astro-code-token-italic: italic;
+    --astro-code-token-underline: underline;
+
   }
   .dark {
     --background: 0 0% 3.9%;
@@ -695,12 +742,17 @@ body {
   padding-left: 2rem;
 }
 
-
-
 .container-flat {
   width: 100%;
   margin-right: auto;
   margin-left: auto;
   padding-right: 2rem;
   padding-left: 2rem;
+}
+
+.container.container-klola {
+  width: 100%;
+  margin: 0 auto;
+  margin-inline: auto;
+  padding-inline: 1.5rem;
 }
