feat(lp-treon): change name and timezone

--- a/apps/lp-treonstudio/src/components/global/Navigation.astro
+++ b/apps/lp-treonstudio/src/components/global/Navigation.astro
@@ -38,7 +38,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
       href="https://buy.polar.sh/polar_cl_1VZ_5CG_hCUa3jpsD91OT3rf333sjjrDLG2h6SbvGJg"
         class="px-2 py-1 h-14 text-sm flex font-medium items-center bg-base-50 text-base-900 outline outline-base-900 dark:outline-base-100 hover:bg-base-950 duration-300 rounded-[calc(var(--card-radius)-var(--card-padding))] dark:bg-base-900 dark:text-white dark:hover:bg-base-800"
       >
-        Buy Kotei
+        Contact us
       </a>
     </div>
   </div>
