--- a/apps/lp-treonstudio/src/components/landing/Hero.astro
+++ b/apps/lp-treonstudio/src/components/landing/Hero.astro
@@ -1,5 +1,5 @@
 ---
-// Fundations
+// Foundations
 import Text from "@/components/fundations/elements/Text.astro";
 import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 ---
@@ -14,9 +14,7 @@ import Wrapper from "@/components/fundations/containers/Wrapper.astro";
         data-aos-duration="1500"
         class="dark:text-white xl:text-6xl tracking-tight font-medium text-black text-balance"
       >
-        Dezain Sutajio Kotei® is a design studio based in Fukuoka that
-        specializes in creating beautiful and simple brands for businesses that
-        customers remember.
+        TreonStudio is a creative studio based in Yogyakarta that specializes in creating beautiful and simple brands for businesses that customers remember.
       </Text>
     </div>
   </Wrapper>
