--- a/apps/lp-treonstudio/src/pages/system/overview.astro
+++ b/apps/lp-treonstudio/src/pages/system/overview.astro
@@ -13,7 +13,7 @@ const pageData = [
         links: [
           { url: "/", name: "Home" },
           { url: "/about", name: "About" },
-          { url: "/studio", name: "Studio" },
+          { url: "/studio", name: "TreonStudio" },
           { url: "/404", name: "Error 404" },
         ],
       },
@@ -34,11 +34,11 @@ const pageData = [
           { name: "Typography", url: "/system/typography" },
           {
             name: "License",
-            url: "https://lexingtonthemes.com/legal/license/",
+            url: "https://treonstudio.com/legal/license/",
           },
           {
             name: "Documentation",
-            url: "https://lexingtonthemes.com/documentation",
+            url: "https://treonstudio.com/documentation",
           },
         ],
       },
