--- a/apps/lp-treonstudio/src/components/global/Footer.astro
+++ b/apps/lp-treonstudio/src/components/global/Footer.astro
@@ -4,23 +4,6 @@ import Text from "@/components/fundations/elements/Text.astro";
 import Wrapper from "@/components/fundations/containers/Wrapper.astro";
 const navigationItems = [
   {
-    title: "Resources",
-    items: [
-      {
-        href: "https://buy.polar.sh/polar_cl_1VZ_5CG_hCUa3jpsD91OT3rf333sjjrDLG2h6SbvGJg",
-        text: "Buy Kotei",
-      },
-      {
-        href: "https://lexingtonthemes.com/legal/license/",
-        text: "License",
-      },
-      {
-        href: "https://lexingtonthemes.com/documentation",
-        text: "Documentation",
-      },
-    ],
-  },
-  {
     title: "Connect",
     items: [
       { href: "#_", text: "GitHub" },
@@ -28,32 +11,7 @@ const navigationItems = [
       { href: "#_", text: "Instagram" },
       { href: "#_", text: "Linked In" },
     ],
-  },
-  {
-    title: "Navigation",
-    items: [
-      {
-        href: "/system/overview",
-        text: "Overview",
-      },
-      {
-        href: "/system/links",
-        text: "Links",
-      },
-      {
-        href: "/system/buttons",
-        text: "Buttons",
-      },
-      {
-        href: "/system/colors",
-        text: "Colors",
-      },
-      {
-        href: "/system/typography",
-        text: "Typography",
-      },
-    ],
-  },
+  }
 ];
 ---
 
@@ -92,8 +50,8 @@ const navigationItems = [
         variant="textSM"
         class="text-base-700 dark:text-base-400 pt-2 md:text-balance"
       >
-        © Copyright Lexington Themes <span id="year"></span>. All rights
-        reserved. Designed and built in the Åland Islands by Michael Andreuzza.
+        © Copyright TreonStudio <span id="year"></span>. All rights
+        reserved. Designed and built in the Raizora House.
       </Text>
       <div class="text-right">
         <Text
@@ -136,7 +94,7 @@ const navigationItems = [
   function updateClock() {
     // Create a new Date object based on Helsinki's timezone
     const now = new Date().toLocaleString("en-US", {
-      timeZone: "Europe/Helsinki",
+      timeZone: "Asia/Jakarta",
     });
 
     // Convert the time string to a Date object
