--- a/apps/lp-treonstudio/src/pages/studio.astro
+++ b/apps/lp-treonstudio/src/pages/studio.astro
@@ -166,7 +166,7 @@ const services = [
             data-aos-duration="1500"
             class="dark:text-white xl:text-6xl tracking-tight font-medium text-black text-balance"
           >
-            Studio
+            TreonStudio
           </Text>
           <Text
             tag="p"
